@@ -1,0 +1,1 @@
+pkgpython_PYTHON = __init__.py scriptcomm.py
