@@ -1,3 +1,6 @@
+2012-05-04
+ * Python libraries - scriptcomm.py
+
 2012-04-24
  * time on sky statistics
 
